Moved common error to the share resource class

--- a/Store/Areas/Admin/Pages/Localization/Language/LanguageResource.ru.resx
+++ b/Store/Areas/Admin/Pages/Localization/Language/LanguageResource.ru.resx
@@ -123,4 +123,7 @@
   <data name="Heading title" xml:space="preserve">
     <value>Языки</value>
   </data>
+  <data name="Language already exists" xml:space="preserve">
+    <value>Язык уже существует.</value>
+  </data>
 </root>
