--- a/Store/Areas/Admin/Pages/Localization/Language/LanguageResource.ru.resx
+++ b/Store/Areas/Admin/Pages/Localization/Language/LanguageResource.ru.resx
@@ -120,10 +120,10 @@
   <data name="Action" xml:space="preserve">
     <value>Действия</value>
   </data>
+  <data name="Code already exists" xml:space="preserve">
+    <value>Язык с таким кодом уже существует.</value>
+  </data>
   <data name="Heading title" xml:space="preserve">
     <value>Языки</value>
-  </data>
-  <data name="Language already exists" xml:space="preserve">
-    <value>Язык уже существует.</value>
   </data>
 </root>
