--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml.ru.resx
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml.ru.resx
@@ -120,6 +120,9 @@
   <data name="Add" xml:space="preserve">
     <value>Добавить язык</value>
   </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Изменить язык</value>
+  </data>
   <data name="No result" xml:space="preserve">
     <value>Нет результатов</value>
   </data>
