--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml.ru.resx
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml.ru.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Action" xml:space="preserve">
+    <value>Действия</value>
+  </data>
   <data name="Add" xml:space="preserve">
     <value>Добавить язык</value>
   </data>
+  <data name="Code already exists" xml:space="preserve">
+    <value>Язык с таким кодом уже существует.</value>
+  </data>
   <data name="Edit" xml:space="preserve">
     <value>Изменить язык</value>
+  </data>
+  <data name="Heading title" xml:space="preserve">
+    <value>Языки</value>
   </data>
   <data name="No result" xml:space="preserve">
     <value>Нет результатов</value>
