--- a/Store/Areas/Admin/CommonResource.ru.resx
+++ b/Store/Areas/Admin/CommonResource.ru.resx
@@ -120,6 +120,9 @@
   <data name="Close" xml:space="preserve">
     <value>Закрыть</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Удалить</value>
+  </data>
   <data name="Save" xml:space="preserve">
     <value>Сохранить</value>
   </data>
